Force SMS flex layout with inline styles

--- a/crm/index.html
+++ b/crm/index.html
@@ -546,7 +546,7 @@
                   <button class="btn btn-small btn-secondary" onclick="toggleSmsStatus()" id="sms-status-btn" style="border-radius:8px">Close</button>
                 </div>
               </div>
-              <div class="sms-messages" id="sms-messages"></div>
+              <div class="sms-messages" id="sms-messages" style="display:flex;flex-direction:column;gap:4px;padding:20px;overflow-y:auto;flex:1"></div>
               <div class="sms-composer">
                 <div id="sms-templates-bar" class="sms-templates-bar" style="display:none;margin-bottom:8px;border-radius:8px">
                   <div style="display:flex;justify-content:space-between;padding:10px 16px;font-size:13px;font-weight:600;color:#8e8e93">
