--- a/crm/index.html
+++ b/crm/index.html
@@ -4435,15 +4435,20 @@ ${transcript.substring(0,10000)}`;
       smsState.messages.forEach(m => {
         const msgDate = new Date(m.created_at).toDateString();
         if (msgDate !== lastDate) { 
-          html += `<div class="sms-date-divider">${formatDateLabel(m.created_at)}</div>`; 
+          html += `<div style="text-align:center;padding:16px 0 8px;font-size:12px;color:#8e8e93;font-weight:500">${formatDateLabel(m.created_at)}</div>`; 
           lastDate = msgDate; 
         }
         const time = new Date(m.created_at).toLocaleTimeString([], { hour: 'numeric', minute: '2-digit' });
         const isOutbound = m.direction === 'outbound';
+        const bubbleStyle = isOutbound 
+          ? 'background:#007aff;color:#fff;border-radius:18px;border-bottom-right-radius:4px;padding:10px 14px;max-width:75%;word-wrap:break-word'
+          : 'background:#e5e5ea;color:#1a1a1a;border-radius:18px;border-bottom-left-radius:4px;padding:10px 14px;max-width:75%;word-wrap:break-word';
+        const alignStyle = isOutbound ? 'align-self:flex-end;text-align:right' : 'align-self:flex-start;text-align:left';
+        const metaStyle = isOutbound ? 'text-align:right' : 'text-align:left';
         html += `
-          <div class="sms-message ${isOutbound ? 'outbound' : 'inbound'}">
-            <div class="sms-message-bubble">${escapeHtml(m.body)}</div>
-            <div class="sms-message-meta">${time}${isOutbound && m.sent_by_name ? ' · ' + escapeHtml(m.sent_by_name) : ''}</div>
+          <div style="display:flex;flex-direction:column;margin:2px 0;${alignStyle}">
+            <div style="${bubbleStyle}">${escapeHtml(m.body)}</div>
+            <div style="font-size:11px;color:#8e8e93;margin-top:4px;padding:0 4px;${metaStyle}">${time}${isOutbound && m.sent_by_name ? ' · ' + escapeHtml(m.sent_by_name) : ''}</div>
           </div>`;
       });
       container.innerHTML = html;
