--- a/crm/index.html
+++ b/crm/index.html
@@ -4428,28 +4428,23 @@ ${transcript.substring(0,10000)}`;
     function renderSmsMessages() {
       const container = document.getElementById('sms-messages');
       if (!smsState.messages.length) { 
-        container.innerHTML = '<div style="text-align:center;padding:40px;color:#8e8e93">No messages yet</div>'; 
-        return; 
+        container.innerHTML = '<div style="text-align:center;padding:40px;color:#86868b">No messages yet</div>'; 
+        return;
       }
       let html = '', lastDate = null;
       smsState.messages.forEach(m => {
         const msgDate = new Date(m.created_at).toDateString();
-        if (msgDate !== lastDate) { 
-          html += `<div style="text-align:center;padding:16px 0 8px;font-size:12px;color:#8e8e93;font-weight:500">${formatDateLabel(m.created_at)}</div>`; 
-          lastDate = msgDate; 
+        if (msgDate !== lastDate) {
+          html += `<div style="text-align:center;padding:16px 0 8px;font-size:12px;color:#86868b;font-weight:500">${formatDateLabel(m.created_at)}</div>`;
+          lastDate = msgDate;
         }
         const time = new Date(m.created_at).toLocaleTimeString([], { hour: 'numeric', minute: '2-digit' });
         const isOutbound = m.direction === 'outbound';
-        const bubbleStyle = isOutbound 
-          ? 'background:#007aff;color:#fff;border-radius:18px;border-bottom-right-radius:4px;padding:10px 14px;max-width:75%;word-wrap:break-word'
-          : 'background:#e5e5ea;color:#1a1a1a;border-radius:18px;border-bottom-left-radius:4px;padding:10px 14px;max-width:75%;word-wrap:break-word';
-        const alignStyle = isOutbound ? 'align-self:flex-end;text-align:right' : 'align-self:flex-start;text-align:left';
-        const metaStyle = isOutbound ? 'text-align:right' : 'text-align:left';
-        html += `
-          <div style="display:flex;flex-direction:column;margin:2px 0;${alignStyle}">
-            <div style="${bubbleStyle}">${escapeHtml(m.body)}</div>
-            <div style="font-size:11px;color:#8e8e93;margin-top:4px;padding:0 4px;${metaStyle}">${time}${isOutbound && m.sent_by_name ? ' · ' + escapeHtml(m.sent_by_name) : ''}</div>
-          </div>`;
+        if (isOutbound) {
+          html += `<div style="display:flex;flex-direction:column;align-items:flex-end;margin:1px 0"><div style="background:#007aff;color:#fff;border-radius:18px;border-bottom-right-radius:4px;padding:8px 14px;max-width:70%;word-wrap:break-word;font-size:15px;line-height:1.4">${escapeHtml(m.body)}</div><div style="font-size:11px;color:#86868b;margin-top:2px;padding-right:4px">${time}${m.sent_by_name ? ' · ' + escapeHtml(m.sent_by_name) : ''}</div></div>`;
+        } else {
+          html += `<div style="display:flex;flex-direction:column;align-items:flex-start;margin:1px 0"><div style="background:#e9e9eb;color:#1d1d1f;border-radius:18px;border-bottom-left-radius:4px;padding:8px 14px;max-width:70%;word-wrap:break-word;font-size:15px;line-height:1.4">${escapeHtml(m.body)}</div><div style="font-size:11px;color:#86868b;margin-top:2px;padding-left:4px">${time}</div></div>`;
+        }
       });
       container.innerHTML = html;
       container.scrollTop = container.scrollHeight;
