Force SMS two-column layout

--- a/crm/index.html
+++ b/crm/index.html
@@ -508,8 +508,8 @@
 
       <!-- SMS Inbox -->
       <section class="page" id="page-sms-inbox">
-        <div class="sms-inbox-container">
-          <div class="sms-conversation-list">
+        <div style="display:flex;height:calc(100vh - 120px);background:#fff;border-radius:12px;overflow:hidden;box-shadow:0 2px 12px rgba(0,0,0,.08)">
+          <<div style="width:340px;border-right:1px solid #e5e5e5;display:flex;flex-direction:column;background:#f6f6f6">
             <div class="sms-list-header">
               <h2>Messages</h2>
               <select id="sms-filter-status" class="filter-select" onchange="loadSmsConversations()" style="border-radius:8px">
@@ -522,7 +522,7 @@
               <div class="sms-loading">Loading conversations...</div>
             </div>
           </div>
-          <div class="sms-thread-container" id="sms-thread-container">
+          <div style="flex:1;display:flex;flex-direction:column;background:#fff" id="sms-thread-container">
             <div class="sms-empty-state" id="sms-empty-state">
               <div style="text-align:center;padding:60px 20px;color:#8e8e93">
                 <div style="font-size:64px;margin-bottom:16px">💬</div>
