--- a/crm/index.html
+++ b/crm/index.html
@@ -509,7 +509,7 @@
       <!-- SMS Inbox -->
       <section class="page" id="page-sms-inbox">
         <div style="display:flex;height:calc(100vh - 120px);background:#fff;border-radius:12px;overflow:hidden;box-shadow:0 2px 12px rgba(0,0,0,.08)">
-          <<div style="width:340px;border-right:1px solid #e5e5e5;display:flex;flex-direction:column;background:#f6f6f6">
+          <div style="width:340px;border-right:1px solid #e5e5e5;display:flex;flex-direction:column;background:#f6f6f6">
             <div class="sms-list-header">
               <h2>Messages</h2>
               <select id="sms-filter-status" class="filter-select" onchange="loadSmsConversations()" style="border-radius:8px">
