--- a/crm/index.html
+++ b/crm/index.html
@@ -530,37 +530,28 @@
                 <p style="font-size:15px">Choose a conversation from the list to view messages</p>
               </div>
             </div>
-            <div class="sms-thread" id="sms-thread" style="display:none">
-              <div class="sms-thread-header">
-                <div class="sms-thread-info">
-                  <div class="sms-avatar" id="sms-thread-avatar">?</div>
+            <div id="sms-thread" style="display:none;flex-direction:column;height:100%">
+              <div style="padding:12px 16px;border-bottom:1px solid #e5e5e5;display:flex;align-items:center;justify-content:space-between">
+                <div style="display:flex;align-items:center;gap:12px">
+                  <div id="sms-thread-avatar" style="width:40px;height:40px;border-radius:50%;background:linear-gradient(135deg,#7c7c7c 0%,#a5a5a5 100%);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:600;font-size:14px">?</div>
                   <div>
-                    <h3 id="sms-thread-name">Unknown</h3>
-                    <span id="sms-thread-phone" style="font-size:13px;color:#8e8e93"></span>
+                    <h3 id="sms-thread-name" style="margin:0;font-size:17px;font-weight:600">Unknown</h3>
+                    <span id="sms-thread-phone" style="font-size:13px;color:#86868b"></span>
                   </div>
                 </div>
-                <div style="display:flex;gap:8px;align-items:center">
-                  <select id="sms-assign-select" class="filter-select" onchange="assignSmsConversation(this.value)" style="border-radius:8px;font-size:13px">
-                    <option value="">Unassigned</option>
-                  </select>
-                  <button class="btn btn-small btn-secondary" onclick="toggleSmsStatus()" id="sms-status-btn" style="border-radius:8px">Close</button>
-                </div>
+                <select id="sms-assign-select" onchange="assignSmsConversation(this.value)" style="border-radius:8px;padding:6px 10px;border:1px solid #e5e5e5;font-size:13px;background:#fff">
+                  <option value="">Unassigned</option>
+                </select>
               </div>
-              <div class="sms-messages" id="sms-messages" style="display:flex;flex-direction:column;gap:4px;padding:20px;overflow-y:auto;flex:1"></div>
-              <div class="sms-composer">
-                <div id="sms-templates-bar" class="sms-templates-bar" style="display:none;margin-bottom:8px;border-radius:8px">
-                  <div style="display:flex;justify-content:space-between;padding:10px 16px;font-size:13px;font-weight:600;color:#8e8e93">
-                    <span>Quick Replies</span><span onclick="closeSmsTemplates()" style="cursor:pointer">✕</span>
-                  </div>
-                  <div id="sms-templates-list"></div>
-                </div>
-                <div class="sms-composer-inner">
-                  <textarea id="sms-message-input" placeholder="iMessage" rows="1" onkeydown="if(event.key==='Enter'&&!event.shiftKey){event.preventDefault();sendSmsMessage()}" oninput="updateCharCount()"></textarea>
-                  <button class="sms-send-btn" onclick="sendSmsMessage()" id="sms-send-btn" title="Send">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
+              <div id="sms-messages" style="flex:1;overflow-y:auto;padding:16px;display:flex;flex-direction:column;gap:2px;background:#fff"></div>
+              <div style="padding:12px 16px;border-top:1px solid #e5e5e5;background:#f6f6f6">
+                <div style="display:flex;align-items:flex-end;gap:8px">
+                  <textarea id="sms-message-input" placeholder="iMessage" rows="1" onkeydown="if(event.key==='Enter'&&!event.shiftKey){event.preventDefault();sendSmsMessage()}" oninput="updateCharCount()" style="flex:1;border:1px solid #e5e5e5;border-radius:18px;padding:8px 14px;font-size:15px;resize:none;outline:none;font-family:inherit;min-height:36px;max-height:100px;background:#fff"></textarea>
+                  <button onclick="sendSmsMessage()" id="sms-send-btn" style="width:32px;height:32px;border-radius:50%;background:#007aff;border:none;cursor:pointer;display:flex;align-items:center;justify-content:center;flex-shrink:0">
+                    <svg width="16" height="16" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12L12 5M12 5v6M12 5H6"/></svg>
                   </button>
                 </div>
-                <div class="sms-char-count" id="sms-char-count">0 / 160</div>
+                <div id="sms-char-count" style="text-align:right;padding-top:4px;font-size:11px;color:#86868b">0 / 160</div>
               </div>
             </div>
           </div>
