Remove status button reference

--- a/crm/index.html
+++ b/crm/index.html
@@ -352,6 +352,7 @@
     .sms-template-item:hover{background:#f3f4f6}
     .sms-empty-state{flex:1;display:flex;align-items:center;justify-content:center}
     #page-sms-inbox .intercom-launcher, #page-sms-inbox [class*="intercom"] { display: none !important; }
+    .intercom-lightweight-widget-launcher { bottom: 80px !important; }
   </style>
 </head>
 <body>
@@ -4417,7 +4418,6 @@ ${transcript.substring(0,10000)}`;
       document.getElementById('sms-thread-name').textContent = name;
       document.getElementById('sms-thread-phone').textContent = formatPhone(conv.phone_number);
       document.getElementById('sms-assign-select').value = conv.assigned_to || '';
-      document.getElementById('sms-status-btn').textContent = conv.status === 'open' ? 'Close' : 'Reopen';
       await loadSmsMessages(id);
       if (conv.unread_count > 0) await markSmsRead(id);
       renderSmsConversations();
