--- a/crm/index.html
+++ b/crm/index.html
@@ -520,6 +520,9 @@
                 <option value="closed">Closed</option>
               </select>
             </div>
+            <div style="padding:8px 12px;border-bottom:1px solid #e5e5e5">
+              <input type="text" id="sms-search" placeholder="Search names or numbers..." oninput="filterSmsConversations()" style="width:100%;padding:8px 12px;border:1px solid #e5e5e5;border-radius:8px;font-size:14px;background:#fff">
+            </div>
             <div id="sms-conversations" class="sms-conversations-scroll">
               <div class="sms-loading">Loading conversations...</div>
             </div>
@@ -537,13 +540,16 @@
                 <div style="display:flex;align-items:center;gap:12px">
                   <div id="sms-thread-avatar" style="width:40px;height:40px;border-radius:50%;background:linear-gradient(135deg,#7c7c7c 0%,#a5a5a5 100%);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:600;font-size:14px">?</div>
                   <div>
-                    <<h3 id="sms-thread-name" style="margin:0;font-size:17px;font-weight:600;cursor:pointer;color:#007aff" onclick="openSmsContact()">Unknown</h3>
+                    <h3 id="sms-thread-name" style="margin:0;font-size:17px;font-weight:600;cursor:pointer;color:#007aff" onclick="openSmsContact()">Unknown</h3>
                     <span id="sms-thread-phone" style="font-size:13px;color:#86868b"></span>
                   </div>
                 </div>
-                <select id="sms-assign-select" onchange="assignSmsConversation(this.value)" style="border-radius:8px;padding:6px 10px;border:1px solid #e5e5e5;font-size:13px;background:#fff">
-                  <option value="">Unassigned</option>
-                </select>
+                <div style="display:flex;gap:8px;align-items:center">
+                  <select id="sms-assign-select" onchange="assignSmsConversation(this.value)" style="border-radius:8px;padding:6px 10px;border:1px solid #e5e5e5;font-size:13px;background:#fff">
+                    <option value="">Unassigned</option>
+                  </select>
+                  <button onclick="deleteSmsConversation(smsState.currentConversation?.id)" style="padding:6px 10px;border-radius:8px;border:1px solid #fee2e2;background:#fff;color:#ef4444;font-size:12px;cursor:pointer" title="Delete conversation">🗑️</button>
+                </div>
               </div>
               <div id="sms-messages" style="flex:1;overflow-y:auto;padding:16px;display:flex;flex-direction:column;gap:2px;background:#fff"></div>
               <div style="padding:12px 16px;border-top:1px solid #e5e5e5;background:#f6f6f6">
@@ -4373,6 +4379,58 @@ ${transcript.substring(0,10000)}`;
         badge.textContent = totalUnread;
         badge.style.display = totalUnread > 0 ? 'inline-block' : 'none';
       }
+    }
+
+    function filterSmsConversations() {
+      const search = document.getElementById('sms-search')?.value?.toLowerCase() || '';
+      const container = document.getElementById('sms-conversations');
+      if (!search) { renderSmsConversations(); return; }
+      const filtered = smsState.conversations.filter(c => {
+        const name = c.contact_first_name ? `${c.contact_first_name} ${c.contact_last_name || ''}`.toLowerCase() : '';
+        const company = (c.company_name || '').toLowerCase();
+        const phone = (c.phone_number || '').replace(/\D/g, '');
+        const searchNum = search.replace(/\D/g, '');
+        return name.includes(search) || company.includes(search) || phone.includes(searchNum) || (c.last_message_preview || '').toLowerCase().includes(search);
+      });
+      if (!filtered.length) { container.innerHTML = '<div style="text-align:center;padding:40px;color:#86868b">No matches found</div>'; return; }
+      // Render filtered list
+      container.innerHTML = filtered.map(c => {
+        const name = c.contact_first_name ? `${c.contact_first_name} ${c.contact_last_name || ''}`.trim() : c.company_name || formatPhone(c.phone_number);
+        const initials = getInitials(name);
+        const isActive = smsState.currentConversation?.id === c.id;
+        const isUnread = c.unread_count > 0;
+        const preview = c.last_message_preview || 'No messages';
+        const arrow = c.last_message_direction === 'outbound' ? '↩ ' : '';
+        const bgStyle = isActive ? 'background:#007aff' : 'background:transparent';
+        const nameColor = isActive ? '#fff' : '#1d1d1f';
+        const previewColor = isActive ? 'rgba(255,255,255,0.8)' : '#86868b';
+        const timeColor = isActive ? 'rgba(255,255,255,0.7)' : '#86868b';
+        return `
+          <div onclick="selectSmsConversation('${c.id}')" style="display:flex;align-items:center;padding:10px 12px;cursor:pointer;border-radius:10px;margin:2px 8px;${bgStyle}">
+            ${isUnread ? '<div style="width:10px;height:10px;background:#007aff;border-radius:50%;margin-right:8px;flex-shrink:0"></div>' : '<div style="width:10px;margin-right:8px"></div>'}
+            <div style="width:40px;height:40px;border-radius:50%;background:linear-gradient(135deg,#7c7c7c 0%,#a5a5a5 100%);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:600;font-size:14px;margin-right:10px;flex-shrink:0">${initials}</div>
+            <div style="flex:1;min-width:0">
+              <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:2px">
+                <span style="font-weight:${isUnread ? '600' : '500'};color:${nameColor};font-size:15px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis">${escapeHtml(name)}</span>
+                <span style="font-size:12px;color:${timeColor};margin-left:8px;flex-shrink:0">${formatRelative(c.last_message_at)}</span>
+              </div>
+              <div style="font-size:13px;color:${previewColor};white-space:nowrap;overflow:hidden;text-overflow:ellipsis">${arrow}${escapeHtml(preview)}</div>
+            </div>
+          </div>`;
+      }).join('');
+    }
+
+    async function deleteSmsConversation(id) {
+      if (!confirm('Delete this conversation and all messages? This cannot be undone.')) return;
+      try {
+        await db.from('sms_messages').delete().eq('conversation_id', id);
+        await db.from('sms_conversations').delete().eq('id', id);
+        smsState.currentConversation = null;
+        document.getElementById('sms-thread').style.display = 'none';
+        document.getElementById('sms-empty-state').style.display = 'flex';
+        await loadSmsConversations();
+        showToast('Conversation deleted');
+      } catch (e) { console.error(e); showToast('Failed to delete', 'error'); }
     }
 
     function renderSmsConversations() {
