Add Support Issue and Success Request outcomes

--- a/crm/index.html
+++ b/crm/index.html
@@ -787,7 +787,7 @@
           </div>
           <div class="activity-form" id="shop-activity-form">
             <input type="hidden" id="shop-activity-type">
-            <div class="form-group" style="margin-bottom:10px"><label>Outcome</label><select id="shop-activity-outcome"><option value="">Select...</option><option value="connected">Connected</option><option value="voicemail">Voicemail</option><option value="no_answer">No Answer</option><option value="interested">Interested</option><option value="not_interested">Not Interested</option></select></div>
+            <div class="form-group" style="margin-bottom:10px"><label>Outcome</label><select id="shop-activity-outcome"><option value="">Select...</option><option value="connected">Connected</option><option value="voicemail">Voicemail</option><option value="no_answer">No Answer</option><option value="interested">Interested</option><option value="not_interested">Not Interested</option><option value="support_issue">Support Issue</option><option value="success_request">Success Request</option></select></div>
             <div class="form-group"><label>Notes</label><textarea id="shop-activity-notes" style="min-height:80px"></textarea></div>
             <div style="display:flex;gap:8px;justify-content:flex-end;margin-top:10px"><button class="btn btn-secondary btn-small" onclick="hideShopActivityForm()">Cancel</button><button class="btn btn-primary btn-small" onclick="saveShopActivity()">Save</button></div>
           </div>
@@ -852,7 +852,7 @@
           </div>
           <div class="activity-form" id="contact-activity-form">
             <input type="hidden" id="contact-activity-type">
-            <div class="form-group" style="margin-bottom:10px"><label>Outcome</label><select id="contact-activity-outcome"><option value="">Select...</option><option value="connected">Connected</option><option value="voicemail">Voicemail</option><option value="interested">Interested</option><option value="not_interested">Not Interested</option></select></div>
+            <div class="form-group" style="margin-bottom:10px"><label>Outcome</label><select id="contact-activity-outcome"><option value="">Select...</option><option value="connected">Connected</option><option value="voicemail">Voicemail</option><option value="interested">Interested</option><option value="not_interested">Not Interested</option><option value="support_issue">Support Issue</option><option value="success_request">Success Request</option></select></div>
             <div class="form-group"><label>Notes</label><textarea id="contact-activity-notes" style="min-height:80px"></textarea></div>
             <div style="display:flex;gap:8px;justify-content:flex-end;margin-top:10px"><button class="btn btn-secondary btn-small" onclick="hideContactActivityForm()">Cancel</button><button class="btn btn-primary btn-small" onclick="saveContactActivity()">Save</button></div>
           </div>
