Fix signature template ternary operators

--- a/crm/index.html
+++ b/crm/index.html
@@ -2257,7 +2257,7 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
       emailBody=mergeFields(emailBody);
       
       // Add signature
-      emailBody+=generateSignaturePlainText();
+      // Signature handled by {{signature}} merge field
       
       const subject=mergeFields(step.subject)||'Following up';
       const from=googleUser?.email||currentUser?.email||'';
