Fix double backtick syntax error

--- a/crm/index.html
+++ b/crm/index.html
@@ -4207,8 +4207,8 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
       document.getElementById('meeting-detail-content').innerHTML=`
         <div style="display:flex;gap:16px;margin-bottom:20px;flex-wrap:wrap">
           <div><strong>Date:</strong> ${formatDate(m.meeting_date)}</div>
-          ${contact?``<div><strong>Contact:</strong> ${contact.first_name} ${contact.last_name}</div>`:''}
-          ${m.source_url?``<div><a href="${m.source_url}" target="_blank">📄 View Original Document</a></div>`:''}
+          ${contact?`<div><strong>Contact:</strong> ${contact.first_name} ${contact.last_name}</div>`:''}
+          ${m.source_url?`<div><a href="${m.source_url}" target="_blank">📄 View Original Document</a></div>`:''}
         </div>
         
         <div class="card" style="margin-bottom:20px">
