Fix missing brace in testTwilioConnection

--- a/crm/index.html
+++ b/crm/index.html
@@ -3669,7 +3669,7 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
       // This would need a backend proxy in production
       showToast('Twilio credentials saved. SMS requires backend integration.');
       document.getElementById('twilio-status-dot').classList.add('connected');
-      document.getElementById('twilio-status-text').textContent='Credentials saved';
+      document.getElementById('twilio-status-text').textContent='Credentials saved';}
 
     async function runHubspotMigration(){
       if(!confirm("This will import all contacts, companies, deals, and notes from HubSpot. Continue?"))return;
